--- a/TaskExplorer/Forms/SettingsWindow.ui
+++ b/TaskExplorer/Forms/SettingsWindow.ui
@@ -45,7 +45,7 @@
         <enum>QTabWidget::TabPosition::North</enum>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>4</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -844,6 +844,192 @@
              </property>
              <property name="alignment">
               <set>Qt::AlignmentFlag::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tabUpdate">
+        <attribute name="title">
+         <string>Online Updater</string>
+        </attribute>
+        <layout class="QGridLayout" name="gridLayout_38">
+         <item row="0" column="0">
+          <layout class="QGridLayout" name="gridLayout_37">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <item row="6" column="3">
+            <widget class="QComboBox" name="cmbUpdate"/>
+           </item>
+           <item row="8" column="1">
+            <spacer name="verticalSpacer_12">
+             <property name="orientation">
+              <enum>Qt::Orientation::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="0" colspan="2">
+            <widget class="QLabel" name="lblUpdates">
+             <property name="font">
+              <font>
+               <bold>true</bold>
+               <kerning>true</kerning>
+              </font>
+             </property>
+             <property name="text">
+              <string>Update Settings</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="4" colspan="3">
+            <widget class="QLabel" name="lblRelease">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QLabel" name="label_39">
+             <property name="maximumSize">
+              <size>
+               <width>20</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1" colspan="3">
+            <widget class="QCheckBox" name="chkAutoUpdate">
+             <property name="text">
+              <string>Check periodically for new TaskExplorer versions</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="4">
+            <widget class="QLabel" name="lblPreview">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="4" colspan="3">
+            <widget class="QLabel" name="lblRevision">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="4">
+            <widget class="QLabel" name="lblStable">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLabel" name="label_34">
+             <property name="text">
+              <string>Update Check Interval</string>
+             </property>
+             <property name="buddy">
+              <cstring>cmbInterval</cstring>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="2">
+            <widget class="QLabel" name="label_32">
+             <property name="toolTip">
+              <string>New full installers from the selected release channel.</string>
+             </property>
+             <property name="text">
+              <string>Full Upgrades</string>
+             </property>
+             <property name="buddy">
+              <cstring>cmbRelease</cstring>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="6">
+            <spacer name="horizontalSpacer_22">
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="8" column="4" colspan="2">
+            <spacer name="horizontalSpacer_21">
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="6" column="2">
+            <widget class="QLabel" name="label_35">
+             <property name="toolTip">
+              <string>Hotpatches for the installed version, updates to the Templates.ini and translations.</string>
+             </property>
+             <property name="text">
+              <string>Incremental Updates</string>
+             </property>
+             <property name="buddy">
+              <cstring>cmbUpdate</cstring>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="3">
+            <widget class="QComboBox" name="cmbRelease"/>
+           </item>
+           <item row="2" column="4" colspan="2">
+            <widget class="QLabel" name="lblCurrent">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="3">
+            <widget class="QComboBox" name="cmbInterval"/>
+           </item>
+           <item row="4" column="2" colspan="2">
+            <widget class="QRadioButton" name="radStable">
+             <property name="toolTip">
+              <string>The stable channel contains the latest stable GitHub releases.</string>
+             </property>
+             <property name="text">
+              <string>Search in the Stable channel</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="2" colspan="2">
+            <widget class="QRadioButton" name="radPreview">
+             <property name="toolTip">
+              <string>The preview channel contains the latest GitHub pre-releases.</string>
+             </property>
+             <property name="text">
+              <string>Search in the Preview channel</string>
              </property>
             </widget>
            </item>
